SONAR-9590 only heap and heap dump options are now in search.javaOpts