@@ -81,10 +81,6 @@ public class ProcessProperties {
    */
   public static final String ENABLE_STOP_COMMAND = "sonar.enableStopCommand";
 
-  public static final String WEB_ENFORCED_JVM_ARGS = "-Djava.awt.headless=true -Dfile.encoding=UTF-8";
-
-  public static final String CE_ENFORCED_JVM_ARGS = "-Djava.awt.headless=true -Dfile.encoding=UTF-8";
-
   public static final String HTTP_PROXY_HOST = "http.proxyHost";
   public static final String HTTPS_PROXY_HOST = "https.proxyHost";
   public static final String HTTP_PROXY_PORT = "http.proxyPort";
@@ -121,25 +117,7 @@ public class ProcessProperties {
     Properties defaults = new Properties();
     defaults.put(SEARCH_HOST, InetAddress.getLoopbackAddress().getHostAddress());
     defaults.put(SEARCH_PORT, "9001");
-    defaults.put(SEARCH_JAVA_OPTS, "-Xms512m" +
-      " -Xmx512m"  +
-      " -XX:+UseConcMarkSweepGC"  +
-      " -XX:CMSInitiatingOccupancyFraction=75"  +
-      " -XX:+UseCMSInitiatingOccupancyOnly"  +
-      " -XX:+AlwaysPreTouch"  +
-      " -server"  +
-      " -Xss1m"  +
-      " -Djava.awt.headless=true"  +
-      " -Dfile.encoding=UTF-8"  +
-      " -Djna.nosys=true"  +
-      " -Djdk.io.permissionsUseCanonicalPath=true"  +
-      " -Dio.netty.noUnsafe=true"  +
-      " -Dio.netty.noKeySetOptimization=true"  +
-      " -Dio.netty.recycler.maxCapacityPerThread=0"  +
-      " -Dlog4j.shutdownHookEnabled=false"  +
-      " -Dlog4j2.disable.jmx=true"  +
-      " -Dlog4j.skipJansi=true"  +
-      " -XX:+HeapDumpOnOutOfMemoryError");
+    defaults.put(SEARCH_JAVA_OPTS, "-Xms512m -Xmx512m -XX:+HeapDumpOnOutOfMemoryError");
     defaults.put(SEARCH_JAVA_ADDITIONAL_OPTS, "");
 
     defaults.put(PATH_DATA, "data");
